# modulemd-tools

./: .gitignore  .travis.yml  Dockerfile  Dockerfile-tests  LICENSE  README-DETAILED.md  README.md  entrypoint.sh  modulemd-tools.spec  setup.py  tox.ini  travis-stage.sh
.github/workflows/: pr.yml  rpm.yml  test.yml
.tito/: releasers.conf
bld2repo/: README.md  setup.py
bld2repo/bld2repo/: __init__.py  cli.py  config.py  utils.py
bld2repo/tests/: test_bld2repo.py  utils.py
createrepo_mod/: README.md  createrepo_mod.py  setup.py
createrepo_mod/tests/: test_createrepo_mod.py
dir2module/: README.md  dir2module.py  setup.py
dir2module/dir2module/: dir2module.py
dir2module/tests/: conftest.py  test_dir2module.py
man/: createrepo_mod.1  dir2module.1  generate-manpages.sh  modulemd-generate-macros.1  modulemd-merge.1  repo2module.1
modulemd-add-platform/: README.md  modulemd-add-platform.1  setup.cfg  setup.py
modulemd-add-platform/tests/: test_quoting_style.py  test_skipping.py
modulemd-generate-macros/: README.md  modulemd-generate-macros.py
modulemd-merge/: README.md  modulemd-merge.py  setup.py
modulemd-merge/modulemd_merge/: modulemd_merge.py
modulemd-merge/tests/: test_modulemd_merge.py
modulemd_add_platform/: README  README.md  modulemd_add_platform.1  setup.cfg
modulemd_add_platform/modulemd_add_platform/: modulemd_add_platform.py
modulemd_add_platform/tests/: test.yaml  test_quoting_style.py  test_use.py
modulemd_tools/: README.md  __init__.py  setup.py
modulemd_tools/bld2repo/: cli.py  (+3 more)
repo2module/: README.md  cli.py  setup.py
(+40 files in other folders)
