[metadata]
name = modulemd-add-platform
version = 0.0.1
author = Petr Písař
author_email = ppisar@redhat.com
description = Add context for new platform into a modulemd-packager file
long_description = file: README.md
long_description_content_type = text/plain
url = https://github.com/rpm-software-management/modulemd-tools/modulemd-add-platform/
project_urls =
    Bug Tracker = https://github.com/rpm-software-management/modulemd-tools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
# Modulemd >= 2.0 Glib Introspection Module; not available on PIP.
dependency_links = https://github.com/fedora-modularity/libmodulemd

[options.extras_require]
tests = pytest

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    modulemd-add-platform = modulemd_add_platform.modulemd_add_platform:main

